# aiutox-erp

./: .gitignore  README.es.md  README.md  docker-compose.yml
aiutox-module-template/backend/: pyproject.toml
aiutox-module-template/backend/aiutox_module_TEMPLATE/: __init__.py  api.py
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  activities.py  activity_icons.py  admin_modules.py  approvals.py  auth.py  automation.py  calendar.py  comments.py  config.py  contact_methods.py  contacts.py  files.py  flow_runs.py  folders.py  health.py  import_export.py  integrations.py  lazy_router.py  licenses.py  modules_management.py  notification_rules.py  notifications.py  organizations.py  preferences.py  pubsub.py  reporting.py  search.py  sse.py  tags.py  tasks.py  templates.py  tenants.py  tiers.py  users.py  views.py  workflows.py
backend/app/core/: billing_calculators.py  config_file.py  exceptions.py  module_interface.py  module_navigation_icons.py  module_registry.py  responses.py
backend/app/core/activities/: contracts.yaml  events.py  models.py  module.meta.json  permissions.py  router.py  schemas.py  service.py
backend/app/core/approvals/: __init__.py  contracts.yaml  events.py  models.py  module.meta.json  permissions.py  router.py  schemas.py  service.py
backend/app/core/async_tasks/: scheduler.py  task.py
backend/app/core/audit/: __init__.py  models.py
backend/app/core/auth/: __init__.py  dependencies.py  models.py  permissions.py
backend/app/core/automation/: __init__.py  action_executor.py  channel_subscriber.py  contracts.yaml  engine.py  events.py  models.py  module.meta.json  module.py  permissions.py  router.py  scheduler.py  schemas.py  service.py
backend/app/core/billing/: __init__.py  service.py
backend/app/core/cache/: __init__.py  calendar_cache.py  task_cache.py  task_cache_optimized.py  task_cache_service.py
backend/app/core/calendar/: __init__.py  events.py  models.py  module.meta.json  resource_service.py  schemas.py  service.py  sync_service.py
backend/app/core/comments/: contracts.yaml  events.py  module.meta.json  permissions.py  router.py  schemas.py  service.py
backend/app/core/config/: __init__.py  cache.py  models.py  schema.py  service.py  theme_preset_service.py
backend/app/core/contacts/: models.py
backend/app/core/dashboard/: __init__.py  router.py  schemas.py
backend/app/core/db/: session.py
backend/app/core/event_catalog/: __init__.py  loader.py
backend/app/core/events/: __init__.py  core_module_disabled.schema.json  core_module_enabled.schema.json  core_module_exported.schema.json  core_module_installed.schema.json  core_module_reactivated.schema.json  core_module_uninstall_requested.schema.json  core_module_uninstalled.schema.json
backend/app/core/exports/: service.py
backend/app/core/files/: __init__.py  contracts.yaml  events.py  folder_service.py  models.py  module.meta.json  permissions.py  router.py  schemas.py  service.py  storage.py  storage_config_service.py
backend/app/core/flow_runs/: models.py  service.py
backend/app/core/gamification/: analytics_service.py  badge_service.py  leaderboard_service.py  points_service.py
backend/app/core/import_export/: __init__.py  contracts.yaml  events.py  models.py  module.meta.json  permissions.py  router.py  schemas.py  service.py
backend/app/core/insights/: api.py  refresh_scheduler.py  schemas.py  service.py
backend/app/core/integrations/: __init__.py  autodiscovery.py  event_registry.py  events.py  integration_test.py  models.py  service.py  webhooks.py
backend/app/core/licensing/: __init__.py  activation.py  exceptions.py  keys.py  middleware.py  models.py  scheduler.py  service.py
backend/app/core/marketplace/: __init__.py  api.py  catalog.py  models.py  purchase_service.py  schemas.py
backend/app/core/mentions/: __init__.py  events.py  module.meta.json  permissions.py  router.py  schemas.py  service.py
backend/app/core/middleware/: header_encoding.py  module_state.py  request_body_encoding.py  security_headers.py
backend/app/core/migrations/: __init__.py  manager.py  models.py  reporter.py  verifier.py
backend/app/core/modules/: export_service.py  module_events.py  snapshot_marker.py  uninstall_service.py
backend/app/sdk/: CHANGELOG.md  CONTRACT.md  __init__.py  pyproject.toml
backend/config/: marketplace_catalog.yaml  modules.json
backend/migrations/: env.py
backend/migrations/versions/: 2025_01_15-add_automation_tables.py  2025_01_15-add_notifications_tables.py  2025_01_15-add_preferences_tables.py  2025_01_15-add_reporting_tables.py  2025_01_16-add_activities_tables.py  2025_01_16-add_files_tables.py  2025_01_16-add_tags_tables.py  2025_01_17-add_integrations_tables.py  2025_01_17-add_search_tables.py  2025_01_17-add_tasks_tables.py  2025_01_22-add_theme_presets_table.py  2025_01_30-add_deleted_at_to_files.py  2025_12_08-001_add_auth_tables.py  2025_12_08-001_rename_organizations_to_tenants.py  2025_12_08-002_add_business_models_and_extend_user.py  2025_12_09-4d08f620a382_add_module_roles_table.py  2025_12_09-57d4493a7380_add_audit_logs_table.py  2025_12_09-add_products_module.py  2025_12_09-af20de189f20_add_delegated_permissions_table.py  2025_12_11-a8ae578ac76b_add_system_config_table.py  2025_12_12-add_approvals_tables.py  2025_12_12-add_calendar_tables.py  2025_12_12-add_comments_tables.py  2025_12_12-add_import_export_tables.py  2025_12_12-add_templates_tables.py  2025_12_12-add_views_tables.py  2025_12_21-add_config_versions_table.py  2025_12_24-4ad0962434d7_rename_integration_type_to_type.py  2025_12_30-add_folder_id_to_files.py  20260306_task_type.py  2026_01_04-add_crm_module.py  2026_01_04-add_inventory_module.py  2026_01_12-add_approvals_audit_fields.py  2026_01_12-add_flow_runs_table.py  2026_01_12-add_steps_form_print_config.py  2026_01_13_add_task_assignments_table.py  2026_01_13_add_task_reminders_and_recurrences.py  2026_01_13_add_task_source_fields.py  2026_01_15_extend_calendar_for_unified_source.py  2026_01_16-add_teams_tables.py  (+70 more)
frontend/: package-lock.json  (+3 more)
(+927 files in other folders)
