[project]
name = "backend"
version = "0.1.0"
description = "AiutoX ERP Backend - FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "alembic>=1.17.2",
    "fastapi>=0.124.4",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.2.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.31",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.38.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "inquirer>=3.1.0",
    "aiosmtplib>=3.0.0",
    "cryptography>=48.0.1",
    "msgpack>=1.2.1",
    "httpx>=0.28.1",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "aiohttp>=3.14.0",
    "starlette>=1.0.1",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "deepdiff>=6.0",
    "qrcode[pil]>=7.4",
    "boto3>=1.34.0",
    "jsonschema>=4.20.0",
    "packaging>=24.0",
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
    "pytest-timeout>=2.1.0",
    "faker>=33.0.0",

    # Code Quality & Linting
    "black>=25.12.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.19.1",

    # Code Analysis & Security
    "bandit>=1.9.2",
    "radon>=6.0.1",
    "vulture>=2.15",
    "pip-audit>=2.10.0",

    # Auto-fix Tools
    "autoflake>=2.3.3",
    "pyupgrade>=3.21.2",

    # Development Tools
    "ipython>=8.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",

    # System Monitoring (optional)
    "psutil>=5.9.0",
    "keyboard>=0.13.5",
    "pynput>=1.7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | \.venv_traditional
  | venv
  | \.git
  | __pycache__
  | \.pytest_cache
  | temp_pytest_cache
  | migrations
  | htmlcov
  | \.ruff_cache
  | temp
  | scripts
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".venv",
    "venv",
    "temp",
    "scripts",
    "migrations",
    "__pycache__",
    ".git",
    ".ruff_cache",
    ".pytest_cache",
    "temp_pytest_cache",
    "htmlcov",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E402"]
"**/tests/**" = ["N806", "F821"]
"**/middleware/api_key_auth.py" = ["N814"]

[tool.pytest.ini_options]
testpaths = ["tests", "app/modules"]
pythonpath = ["."]
addopts = "-v -n auto --tb=short --durations=10 --import-mode=importlib"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cache_dir = "temp_pytest_cache"
# Default: parallel execution with minimum 4 workers
# -n auto: Auto-detect CPU cores, pero usa mínimo 8 workers para agilizar
# -n 8: Usar exactamente 8 workers
# -n 1: Ejecución serial (para debugging)
# Nota: Cada worker usa su propia base de datos (aiutox_erp_test_worker0, etc.)
# Para forzar workers: usar -n auto o modificar en scripts
asyncio_mode = "auto"
# Suppress verbose SQLAlchemy query logging during tests
log_level = "WARNING"
log_cli = false
# pytest-timeout: kill tests that hang (e.g., blocking Redis/DB connections in workers)
timeout = 60
timeout_method = "thread"
# Markers for test organization
markers = [
    "unit: mark test as unit test",
    "redis: mark test as requiring Redis",
    "integration: mark test as integration test",
    "db: mark test as database test (may be excluded from parallel execution)",
    "performance: mark test as performance test",
    "security: mark test as security-related (auth, RBAC, tenant isolation)",
]
# Suppress known harmless warnings
filterwarnings = [
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning:sqlalchemy",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
mypy_path = ["."]
explicit_package_bases = true
# SQLAlchemy 1.x Column[T] vs T noise — migrate models to Mapped[T] to fix properly
disable_error_codes = "arg-type"

# aiutox_module_* packages are optional plugins not present in this repo —
# suppress all mypy errors for them regardless of invocation context.
[[tool.mypy.overrides]]
module = ["aiutox_module_products", "aiutox_module_products.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = false

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pip-audit>=2.10.0",
    "pip>=26.1.2",
    "sqlalchemy-stubs>=0.4",
]

# Legacy test files — relax strictness
[[tool.mypy.overrides]]
module = [
    "app.modules.*.tests.*",
    "app.modules.*.tests_*",
    "app.backend.*",
]
ignore_errors = true

# Note: dependency-groups is used by uv for development dependencies
# All dev dependencies are now consolidated in [project.optional-dependencies]
# to avoid duplication and version conflicts

[project.scripts]
aiutox = "scripts.cli.aiutox:main"
