[project]
name = "aiutox-module-TEMPLATE"
version = "0.1.0"
description = "AiutoX TEMPLATE module"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "aiutox-sdk>=1.0.0",
]

[project.entry-points."aiutox.modules"]
TEMPLATE = "aiutox_module_TEMPLATE:TemplateModule"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiutox_module_TEMPLATE"]
