[project]
name = "aiutox-sdk"
version = "1.0.0"
description = "AiutoX SDK — public interface for building AiutoX business modules"
readme = "CONTRACT.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "AiutoX", email = "dev@aiutox.io" }]
keywords = ["aiutox", "erp", "plugin", "sdk"]
dependencies = [
    "fastapi>=0.124.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.2",
    "alembic>=1.17.0",
    "redis>=7.1.0",
    "pyjwt>=2.10.0",
    "cryptography>=48.0.1",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.19.1",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/sdk"]

[tool.hatch.build.targets.wheel.sources]
"app/sdk" = "aiutox_sdk"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
